Fix scrolling for now.
This does not look quite as ugly and allows me to observe scroll events.
It still won't hide the browser chrome on mobile, but it will do while
I am waiting for https://github.com/angular/material2/issues/802.

--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -39,8 +39,14 @@ md-input-container {
     width: 100%;
 }
 
-md-sidenav-container {
-    height: 100vh;
+md-sidenav-container > * {
+    display: flex!important;
+    flex-direction: column;
+    height: 100vh!important;
+}
+
+md-sidenav-container > * > *:last-child {
+    overflow: auto;
 }
 
 md-spinner {
@@ -81,6 +87,8 @@ snack-bar-container {
 
 .app-content {
     margin: auto;
+    margin-top: 0;
+    width: 100%;
     max-width: 1600px;
 }
 
